bk_ida/gccida/c3/loop_giv_dump
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_giv_dump/src/loop.c:10955:28: error: unknown type name 'induction_1'
void  loop_giv_dump( const induction_1 *v, FILE *file, int verbose) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_giv_dump/src/loop.c:10981:29: error: use of undeclared identifier 'ptr'
fwrite( *( ( const void **)&ptr + ( __int16)v5), 7uLL, 1uLL, file); 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_giv_dump/src/obj/loop.o] Error 1
